--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 html,body,p,ol,ul,li,dl,dt,dd,blockquote,figure,fieldset,legend,textarea,pre,iframe,hr,h1,h2,h3,h4,h5,h6{margin:0;padding:0}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal}ul{list-style:none}button,input,select,textarea{margin:0}html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}img,video{height:auto;max-width:100%}iframe{border:0}table{border-collapse:collapse;border-spacing:0}td,th{padding:0;text-align:left}
 
 body {
-	background-color: black;
+	background-color: #0f0f0f;
+	margin-left: -50px;
 }
 
 .content {
@@ -22,7 +23,9 @@ body {
 	float: left;
 	width: 40%;
 	margin-left: 5%;
-	margin-right: 3%;
+	margin-right: 5%;
+	animation-name: test2;
+	animation-duration: 1s;
 } 
 
 .test1_title {
@@ -50,4 +53,28 @@ body {
 .test2_text {
 	font-weight: 600;
 	font-family: 'Open Sans', sans-serif;
+}
+
+.test2 {
+	float: left;
+	width: 40%;
+	margin-left: 5%;
+	margin-right: 5%;
+	animation-name: test;
+	animation-duration: 0.75s;
+} 
+
+@keyframes test {
+	from {opacity: 0;
+	margin-top: 50px;}
+	to {opacity: 100;
+		margin-top: 0px;}
+}
+
+@keyframes test2 {
+	from {opacity: 0;
+		filter: blur(10px);
+		margin-top: 0;}
+	to {opacity: 100;
+		filter: blur(0px);}
 }
