--- a/visio.css
+++ b/visio.css
@@ -26,7 +26,7 @@ h1 {
     bottom: 6%; 
     width: 30%;
     min-width: 500px;
-    font-size: 1.3em;
+    font-size: 1em;
 
     animation-name: fade_down;
 	  animation-duration: 0.75s;
@@ -65,6 +65,12 @@ h1 {
 	padding-top: 5%;
 	opacity: 1;
 	transition: 1s;
+}
+
+.some-page-wrapper2 {
+  display: flex;
+  padding-top: 15%;
+  margin-bottom: -50vw;;
 }
   
   .row {
