--- a/visio.css
+++ b/visio.css
@@ -96,6 +96,7 @@ p {
     position: absolute;
     text-align: center;
     color: white;
+    padding-top: 2%;
     margin-left: 5%;
     z-index: 30;
     font-size: 7vw;
@@ -109,6 +110,7 @@ p {
 
 .tl_2 {
     text-align: left;
+    padding-top: 2%;
     margin-left: 5%;
     z-index: 30;
     font-size: 7vw;
@@ -214,6 +216,7 @@ p {
 .some-page-wrapper {
     position: absolute;
     top: 50%;
+    margin: 0 auto;
    /* transform: translateY(-30%);*/
     display: flex;
     opacity: 1;
